# freysa-spark-hackathon

./: .gitignore  AWS-SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.sovereign  Dockerfile.test  Makefile  README.md  config.json  run_enclave.sh  setup.sh  start.sh  test_run.sh  test_start.sh
.github/workflows/: packages.yaml
agent/: .prettierrc  Dockerfile  README.md  codegen.ts  docker-compose.yaml  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  turbo.json
agent/examples/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
agent/examples/public/: app.js  index.html  styles.css
agent/examples/src/: chat-server.ts  completion.ts  lightspark.ts  server.ts  spark-server.ts  swap.ts  transfer.ts
agent/examples/src/tools/: approveTransfer.ts  rejectTransafer.ts  twitter.ts
agent/src/: index.ts
agent/src/api/openai/: completions.ts  coreHandler.ts  fastify.ts  index.ts
agent/src/chat/: example.ts  index.ts  plugin.ts  schema.graphql  server.ts  standalone.ts  types.ts
agent/src/chat/resolvers/: index.ts
agent/src/chat/services/: ChatService.ts  MessageEventService.ts
agent/src/chat/storage/: factory.ts  postgres.ts  sqlite.ts  types.ts
agent/src/chat/storage/migrations/: migrate.js
agent/src/common/: index.ts
agent/src/common/agents/: agents.ts  index.ts
agent/src/common/executors/: index.ts  simple.ts  types.ts
agent/src/common/memory/: index.ts  sqlite.ts  types.ts
agent/src/common/middlewares/: auth.ts  index.ts  jwt.ts
agent/src/common/mocks/: grpcMockEthSigner.ts
agent/src/common/models/: index.ts  openai.ts  types.ts
agent/src/common/scheduler/: scheduler.ts
agent/src/common/storage/: factory.ts  index.ts  local.ts  s3.ts  types.ts
agent/src/common/tools/: completion.ts  donate.ts  index.ts  nftCollection.ts  plan.ts  types.ts  uniswap.ts
agent/src/common/tools/perplexity/: api.ts  tool.ts  types.ts
agent/src/common/tools/replicate/: index.ts  replicate.ts  tool.ts
agent/src/common/tools/replicate/__tests__/: replicateImageGenerationTool.test.ts
agent/src/common/transactions/: executeTransaction.ts  grpcEthereumSignerClient.ts  index.ts  safe.ts  swap.ts
agent/src/common/transactions/abi/: uniswapv2router.ts
agent/src/common/utils/: canonicalize.ts  chunker.ts  filesystem.ts  index.ts  logger.ts
agent/src/common/utils/http/: headers.ts
create-sovereign-agent/: cli.js  package.json  pnpm-lock.yaml
create-sovereign-agent/templates/: Dockerfile.agent
create-sovereign-agent/templates/enclave/: Dockerfile  Makefile  README.md  config.json  run_enclave.sh  setup.sh  start.sh  start_agent.sh
proto/: buf.yaml  key_pool.proto
sovereign/: COMMITTEE.md  Cargo.toml  KEY-SYNC.md  length_prefix.sh  rust-toolchain.toml  rustfmt.toml
sovereign/committee/: Dockerfile  committee_sign.sh  committee_sign_simple.sh  get_committee_message.sh  setup.sh
sovereign/committee/signing/: package-lock.json  package.json  safe_sign.js
sovereign/enclave/: Cargo.toml  build.rs
sovereign/enclave/src/: config.rs  grpc.rs  http.rs  key_server.rs  key_sync.rs  main.rs  mock_secmod.rs  monitoring.rs  nsm.rs  safe.rs  secmod.rs
sovereign/nsm-attestation/: Cargo.toml
sovereign/nsm-attestation/src/: lib.rs
sovereign/verify/: Cargo.toml
sovereign/verify/src/: cert.rs  main.rs
