[workspace]
resolver = "2"
members = ["enclave", "nsm-attestation", "verify"]

# Workspace-level dependencies shared by all members
[workspace.dependencies]
anyhow = "1.0.95"
alloy-primitives = "0.8.15"
alloy-signer = "0.9.1"
aws-nitro-enclaves-cose = "0.5.2"
base64 = "0.22.1"
bytes = "1.9.0"
byteorder = "1.3"
clap = { version = "4.4", features = ["derive"] }
ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
elliptic-curve = "0.13.8"
futures = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.5.2", features = ["full"] }
hyper-rustls = { version = "0.27.5", features = ["ring"] }
hyper-util = { version = "0.1", features = ["full"] }
k256 = { version = "0.13.4", features = ["ecdsa", "pkcs8", "sha256", "arithmetic"] }
lazy_static = "1.5.0"
nix = { version = "0.29", features = ["socket", "fs"] }
nsm-driver = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git", rev = "4f468c4" }
nsm-io = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git", rev = "4f468c4" }
openssl = { version = "0.10.68", features = ["vendored"] }
p256 = "0.13"
pem = "3.0.4"
pki-types = { package = "rustls-pki-types", version = "1.10.1" }
prometheus = "0.13.4"
prost = "0.13.4"
reqwest = "0.12.12"
ring = { version = "0.17.8", default-features = false }
rcgen = { version = "0.13.2", default-features = false, features = [
    "crypto",
    "ring",
] }
rlp = "0.6.1"
rustls = { version = "0.23.20", features = ["ring"] }
rustls-pki-types = "1.0"
secp256k1 = { version = "0.30.0", features = ["recovery"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11.1"
serde_json = "1.0.134"
sha2 = "0.10.8"
sha3 = "0.10.8"
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
tokio = { version = "1.34", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-scoped = "0.2"
tokio-vsock = "0.7.0"
tokio-stream = "0.1.17"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
webpki = "0.22.4"
webpki-roots = "0.26.7"

[workspace.package]
version = "0.1.0"
edition = "2021"
